[package]
name = "swiftide-ask"
version = "0.1.0"
edition = "2021"

[dependencies]
# swiftide = { version = "0.5.0", features = [
swiftide = { path = "../swiftide/swiftide", features = [
    "qdrant",
    "ollama",
    "redis",
    "tree-sitter",
    "fastembed",
] }
anyhow = "1.0.86"
indoc = "2.0.5"
tokio = "1.38.0"
tracing-subscriber = "0.3"
